# gov-benefit-llama-hack

./: .gitignore  README.md  pyproject.toml  test.db
frontend/: package-lock.json  package.json
frontend/.next/server/: server-reference-manifest.json
frontend/src/: App.js  api.js
frontend/src/components/: Dashboard.css  LoginPage.css  UserProfile.css  apiFunctions.js  dashboard.js  login.js  userProfile.js
frontend_/: app.py  app_.py
mindsdb/: tp.ipynb
my-app/: package-lock.json  package.json
my-app/app/: layout.tsx  page.tsx  providers.tsx
my-app/app/api/auth/[...nextauth]/: route.ts
my-app/app/profile/: page.tsx
my-app/components/: app-register-page.tsx
src/backend/: app.py  test.db
src/functions/crawl/: web.py  website.py
src/functions/llm/: rag.py
src/functions/sendNotification/: MailerSend.py
src/workflows/: tp.py  workflow.py
