[tool.poetry]
name = "streamlit_fastapi_togetherai_llama"
version = "0.0.1"
description = "A simple example showcasing streamlit, fastapi, togetherai and llamaindex"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
restack-ai = "^0.0.27"
fastapi = "^0.115.4"
llama-index = "^0.11.22"
llama-index-llms-together = "^0.2.0"
uvicorn = "^0.32.0"
python-dotenv = "0.19"
streamlit = "^1.40.0"
requests = "^2.32.3"
mindsdb-sdk = "^3.1.6"
mailersend = "^0.5.8"
httpx-oauth = "^0.15.1"
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"
google-auth = "^2.36.0"
playwright = "^1.48.0"
llama-index-readers-web = "^0.2.4"
pinecone = "^5.3.1"
llama-index-core = "^0.11.22"
llama-parse = "^0.5.13"
llama-index-readers-file = "^0.2.2"
together = "^1.3.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
app = "src.app:run_app"
